tests/disallowed_operations/sum_with_different_number_type.stderr
error[E0308]: mismatched types
  --> tests/disallowed_operations/sum_with_different_number_type.rs:15:14
   |
15 |     _ = m1 + m2;
   |              ^^ expected `Measure<U1, f32>`, found `Measure<U1>`
   |
   = note: expected struct `Measure<U1, f32>`
              found struct `Measure<U1, f64>`
